12896
Compiling the (wrong) code
{code}
class Test {
  def foo[A](x: A)(implicit rep: Foo[A]): Foo[A] = rep
  abstract class Foo[A]
  implicit def list2Foo[List[A1], A2]
      (implicit _1: Foo[List[A1]], _2: Foo[A2]): Foo[Tuple2[List[A1], A2]] =
    null //dummy

  foo(((List('b'), 3), (Nil, 4)))
}
{code}
produces the the following stack trace
{code}
test.scala:4: error: not found: type A1
  implicit def list2Foo[List[A1], A2]
    (implicit _1: Foo[List[A1]], _2: Foo[A2]): Foo[Tuple2[List[A1], A2]] =
                                                               ^
test.scala:4: error: not found: type A1
  implicit def list2Foo[List[A1], A2]
    (implicit _1: Foo[List[A1]], _2: Foo[A2]): Foo[Tuple2[List[A1], A2]] =
                           ^
Exception in thread "main" java.util.NoSuchElementException: head of empty list
        at scala.Nil$$.head(List.scala:1228)
        at scala.Nil$$.head(List.scala:1225)
        at scala.tools.nsc.symtab.Types$$SubstMap.subst$$0(Types.scala:2374)
        at scala.tools.nsc.symtab.Types$$SubstMap.apply(Types.scala:2390)
        at scala.tools.nsc.symtab.Types$$SubstMap.apply(Types.scala:2358)
        at scala.tools.nsc.symtab.Types$$TypeMap$$$$anonfun$$48.apply(Types.scala:2233)
        at scala.tools.nsc.symtab.Types$$TypeMap$$$$anonfun$$48.apply(Types.scala:2229)
        at scala.tools.nsc.symtab.Types$$class.map2Conserve(Types.scala:3262)
        at scala.tools.nsc.symtab.SymbolTable.map2Conserve(SymbolTable.scala:11)
        at scala.tools.nsc.symtab.Types$$class.map2Conserve(Types.scala:3263)
        at scala.tools.nsc.symtab.SymbolTable.map2Conserve(SymbolTable.scala:11)
        at scala.tools.nsc.symtab.Types$$TypeMap.mapOverArgs(Types.scala:2229)
        at scala.tools.nsc.symtab.Types$$TypeMap.mapOver(Types.scala:2156)
        at scala.tools.nsc.symtab.Types$$SubstMap.apply(Types.scala:2369)
        at scala.tools.nsc.symtab.Types$$Type.subst(Types.scala:424)
        at scala.tools.nsc.symtab.Types$$Type.instantiateTypeParams(Types.scala:306)
        at scala.tools.nsc.symtab.Types$$TypeRef.instantiateTypeParams(Types.scala:1390)
        at scala.tools.nsc.symtab.Types$$TypeRef.transform(Types.scala:1306)
        [...]
{code}
